--- a/src/App.css
+++ b/src/App.css
@@ -10,11 +10,11 @@
   color: white;
 }
 
-.Header img {
+.headerIMG {
   width: 100%;
   height: auto;
   max-height: 100vh;
-  border-radius: 10px;
+  min-height: 100vh;
   object-fit: cover;
 }
 
@@ -28,6 +28,7 @@
 .cloudy {
   width: 50px !important;
   height: 50px !important;
+  margin: 0px 10px;
 }
 
 .section {
@@ -43,7 +44,7 @@
   flex-direction: row;
   justify-content: space-around;
   padding: 20px;
-  width: 1200px;
+  width: 90%;
   background-color: rgb(255, 255, 255);
   flex-wrap: wrap;
   margin: 0px 20px;
@@ -76,20 +77,69 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
   background-color: #fbc000;
+  width: 100%;
+
+}
+
+.footercontainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   padding: 20px;
-  text-align: center;
-  font-size: 1rem;
-  color: white;
-  height: 50vh;
+  background-color: rgb(255, 255, 255);
+  flex-wrap: wrap;
+  margin: 10px 20px;
+  width: 90%;
+  
+}
+
+.cloudyFooter {
+  width: 50px !important;
+  height: 50px !important;
+  margin: 0px 10px;
+  background-color: #fbc000;
+  border-radius: 100%;
+}
+
+.footercontainer h3 {
+  display: flex;
+  margin: 0px 0px 0px 0px;
+  line-height: 1.5;
+  align-items: center;
+}
+
+.footerLogo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  
+  height: fit-content;
 }
 
 .footerbox {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   justify-content: left;
-  background-color: #fbc000;
   padding: 20px;
   color: black;
+  line-height: 0;
+}
+
+.footerLinks {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding: 20px;
+}
+
+.linha-horizontal {
+  display: flex;
+  margin-top: 10px;
+  border-bottom: 4px solid rgba(0, 0, 0, 0.2); /* Ou qualquer cor desejada */
+  width: 75%; /* Ou ajuste a largura conforme necessário */
+   
 }
