--- a/src/App.css
+++ b/src/App.css
@@ -139,7 +139,8 @@
 .linha-horizontal {
   display: flex;
   margin-top: 10px;
-  border-bottom: 4px solid rgba(0, 0, 0, 0.2); /* Ou qualquer cor desejada */
-  width: 75%; /* Ou ajuste a largura conforme necessário */
+  border-bottom: 4px solid rgba(0, 0, 0, 0.1); /* Ou qualquer cor desejada */
+  border-radius: 2px;
+  width: 100%; /* Ou ajuste a largura conforme necessário */
    
 }
