--- a/src/Componentes/Footer/AppFooter.css
+++ b/src/Componentes/Footer/AppFooter.css
@@ -8,6 +8,26 @@
 
 }
 
+.desktopSocial {
+  display: flex;
+
+}
+
+.mobileSocial {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .mobileSocial {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .desktopSocial {
+    display: none;
+  }
+  
+}
 .footercontainer {
   display: flex;
   flex-direction: column;
@@ -20,16 +40,15 @@
   
 }
 
-.footerpages {
+.footerLogo {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
-  gap: 50px;
+  justify-content: space-between;
   align-items: center;
-  width: 80%;
-  padding: 0px;
-  margin-right: 50px;
+  height: fit-content;
+  flex-wrap: wrap;
 }
+
 
 .cloudyFooter {
   width: 50px !important;
@@ -39,19 +58,12 @@
   border-radius: 100%;
 }
 
+
 .footercontainer h3 {
   display: flex;
   margin: 0px 0px 0px 0px;
   line-height: 1.5;
   align-items: center;
-}
-
-.footerLogo {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  height: fit-content;
 }
 
 .SocialMedia {
@@ -60,6 +72,7 @@
   align-items: center;
   gap: 15px;
   padding: 10px;
+  flex-wrap: wrap;
 }
 
 .SocialMedia img {
@@ -67,6 +80,19 @@
   height: 30px;
   transition: transform 0.3s ease;
 }
+
+.footerpages {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 50px;
+  align-items: center;
+  
+  padding: 0px;
+  
+}
+
 
 .footerbox {
   display: flex;
@@ -83,7 +109,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   padding: 20px;
 }
 
@@ -100,6 +126,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: flex-start;
+  flex-wrap: wrap;
   gap: 15px;
   padding: 0px;
   color: black;
@@ -123,5 +150,5 @@
   justify-content: left;
   padding: 10px;
   color: black;
-  
+  flex-wrap: wrap;
 }
