--- a/src/Componentes/Header/AppHeader.css
+++ b/src/Componentes/Header/AppHeader.css
@@ -3,7 +3,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: left;
+  align-items: flex-start;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
@@ -29,3 +29,4 @@
   height: 50px !important;
   margin: 0px 10px;
 }
+
