--- a/src/Componentes/Header/AppHeader.css
+++ b/src/Componentes/Header/AppHeader.css
@@ -17,16 +17,53 @@
   object-fit: cover;
 }
 
-.Header h1 {
-  display: flex;
-  margin: 20px;
-  font-size: 2.5rem;
-  margin-bottom: 20px;
-}
 
 .cloudy {
-  width: 50px !important;
-  height: 50px !important;
+  height: 120px;
+  width: auto;
+  overflow: hidden;
   margin: 0px 10px;
 }
 
+.headerMenu {
+  display: flex;
+  flex-direction: row;
+  padding: 0px 20px 0px 0px;
+  align-items: center;
+}
+
+.list1 {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  gap: 20px;
+}
+
+.headerBar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.headerDrawer {
+  display: none;
+}
+
+@media screen and (max-width: 760px) {
+  .headerMenu {
+  display: none;
+}
+  .headerDrawer {
+  display: flex;
+}
+.headerBar {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  max-height: 100px;
+  overflow: hidden;
+}
+
+}
